# pyredact

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
sample_files/: REDACTED_original_text.txt  original_text.txt  personal_info.yml
src/: config.py  main.py  pyredact.py  redact
